# vmware-nsx-backup-cleaner-container

./: .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  entrypoint.py  pyproject.toml  renovate.json
tests/: test_entrypoint.py
vendor-scripts/: nsx_backup_cleaner.py
vendor-scripts/4.2/: nsx_backup_cleaner.py
